crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__source_gap_trivia_ownership.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun triviaOwnedBlockGaps() {
  val first = 1

  /* JOLT-TRIVIA:blank-line-before-comment */
  val second = 2
  /* JOLT-TRIVIA:comment-resets-newline-run */
  val third = 3 // JOLT-TRIVIA:line-comment-no-blank
  val fourth = 4 // JOLT-TRIVIA:line-comment-before-blank

  val fifth = 5
}

val firstTopLevel = 1 // JOLT-TRIVIA:top-level-line-comment-no-blank
val secondTopLevel = 2 // JOLT-TRIVIA:top-level-line-comment-before-blank

val thirdTopLevel = 3

formatted:
fun triviaOwnedBlockGaps() {
  val first = 1

  /* JOLT-TRIVIA:blank-line-before-comment */
  val second = 2
  /* JOLT-TRIVIA:comment-resets-newline-run */
  val third = 3 // JOLT-TRIVIA:line-comment-no-blank
  val fourth = 4 // JOLT-TRIVIA:line-comment-before-blank

  val fifth = 5
}

val firstTopLevel = 1 // JOLT-TRIVIA:top-level-line-comment-no-blank
val secondTopLevel = 2 // JOLT-TRIVIA:top-level-line-comment-before-blank

val thirdTopLevel = 3

diagnostics:
(none)
