crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__top_level_orphan_token.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun topLevelOrphanToken() = Unit
}

formatted:
fun topLevelOrphanToken() = Unit
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(33), end: TextSize(34) }) message=unexpected closing brace at top level
