crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__trailing_user_type_dot.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun trailingUserTypeDot(value: example.Type.) = value

formatted:
fun trailingUserTypeDot(value: example.Type.) = value

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(44), end: TextSize(45) }) message=expected type segment
