crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__type_argument_declaration_boundary.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
val x: Box<
class C

formatted:
val x: Box<
  class C


diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(12), end: TextSize(17) }) message=expected type
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(12), end: TextSize(17) }) message=expected type argument
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(18), end: TextSize(19) }) message=expected ',' between type arguments
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(20), end: TextSize(20) }) message=expected '>' after type arguments
