crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__type_parameter_list.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class Box<First, /* orphan */ , Second>

formatted:
class Box<First, /* orphan */ , Second>

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(30), end: TextSize(31) }) message=expected type parameter between commas
