crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__unterminated_doc_comment.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class LruCache<K,V>{/**
    private val capacity: Int

formatted:
class LruCache<K, V> {
/**
    private val capacity: Int

diagnostics:
code=kotlin.lex.unterminated_block_comment severity=Error stage=Lexer range=Some(TextRange { start: TextSize(20), end: TextSize(54) }) message=unterminated block comment
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(54), end: TextSize(54) }) message=expected '}' after class body
